--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ packages = [{include = "svg_project"}]
 python = "^3.10"
 pandas = "^2.0.3"
 numpy = "^1.25.2"
+pillow = "^10.0.1"
+cairosvg = "^2.7.1"
 
 
 [build-system]
